--- a/myApp.csproj
+++ b/myApp.csproj
@@ -4,10 +4,12 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
-
+  
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.9.11" />
     <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.8.11" />
+    <PackageReference Include="HtmlAgilityPack.CssSelectors.NetCore" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
