--- a/myApp.csproj
+++ b/myApp.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.8.11" />
     <PackageReference Include="HtmlAgilityPack.CssSelectors.NetCore" Version="1.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Npgsql" Version="4.0.4" />
   </ItemGroup>
 
 </Project>
