--- a/myApp.csproj
+++ b/myApp.csproj
@@ -15,4 +15,14 @@
     <PackageReference Include="Npgsql" Version="4.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Classes\ScrapeHandler\" />
+    <Folder Include="Classes\DataFormatters\" />
+    <Folder Include="Classes\DataToSQL\" />
+    <Folder Include="Classes\PublicEndpoint\" />
+    <Folder Include="Structs\" />
+    <Folder Include="Obsolete\" />
+    <Folder Include="Obsolete\ServerOld\" />
+    <Folder Include="Obsolete\ScrapeClassesOld\" />
+  </ItemGroup>
 </Project>
